--- a/lang/backup_scheduler-fr_FR.po
+++ b/lang/backup_scheduler-fr_FR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-01-05T14:55:26+00:00\n"
+"PO-Revision-Date: 2012-01-29T15:48:15+00:00\n"
 "Last-Translator: SedLex <http://www.sedlex.fr/>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -38,29 +38,38 @@ msgstr "Heure des sauvegardes."
 msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
 msgstr "Merci de noter que 0 signifie minuit, 1 signifie 1h du matin, 13 signifie 1h de l&#039;après midi, etc. La sauvegarde sera lancée à cette heure (heure du serveur) ; ainsi vérifiez que votre serveur n&#039;est pas trop chargé à cette heure là."
 
+msgid "Please also note that the backup won't be end exactly at that time. The backup process could take up to 6h especially if you do not have a lot of traffic on your website and/or if the backup is quite huge."
+msgstr "Merci de noter également que la sauvegarde ne se terminera pas exactement à cette heure. Le processus de sauvegarde peut prendre jusqu&#039;à 6h, en particulier si vous n&#039;avez pas beaucoup de trafic sur votre site et/ou si la sauvegarde est conséquente."
+
 msgid "Keep the backup files for (in days):"
 msgstr "Garder les fichiers de sauvegardes pendant (en jours) :"
 
 msgid "What do you want to save?"
 msgstr "Que voulez-vous sauvegarder ?"
 
-msgid "The plugins directory:"
-msgstr "Le répertoire des plugins :"
+msgid "All directories (the full Wordpress installation):"
+msgstr "Tous les répertoires (l&#039;installation Wordpress complète)"
 
 msgid "(i.e. %s)"
 msgstr "(i.e. %s)"
 
+msgid "Check this option if you want to save everything. Be careful, because the backup could be quite huge!"
+msgstr "Cocher cette option si vous souhaitez sauvegarder tout. Attention, car la sauvegarde peut être assez grosse !"
+
+msgid "The plugins directory:"
+msgstr "Le répertoire des plugins :"
+
 msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
-msgstr "Cocher cette option si vous voulez sauvegarder tous les plugins que vous avez installés et que vous utilisez sur ce site web. "
+msgstr "Cocher cette option si vous voulez sauvegarder tous les plugins que vous avez installés et que vous utilisez sur ce site web."
 
 msgid "The themes directory:"
 msgstr "Le répértoire des thèmes :"
 
 msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
-msgstr "Cocher cette option si vous voulez sauvegarder tous les thèmes que vous avez installés et que vous utilisez sur ce site web. "
+msgstr "Cocher cette option si vous voulez sauvegarder tous les thèmes que vous avez installés et que vous utilisez sur ce site web."
 
 msgid "The upload directory:"
-msgstr "Le répertoire upload : "
+msgstr "Le répertoire upload :"
 
 msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
 msgstr "Cocher cette option si vous voulez sauvegarder toutes les images, les fichiers, etc. que vous avez téléchargés sur vote site web pour créer vos articles/pages."
@@ -71,29 +80,53 @@ msgstr "La base de données SQL :"
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
 msgstr "Cocher cette option si vous voulez sauvegarder le texte de vos articles, vos configurations, etc."
 
+msgid "The maximum file size (in MB):"
+msgstr "La taille maximal de fichier (en Mo):"
+
+msgid "Please note that the zip file will be split into multiple files to comply with the maximum file size you have indicated"
+msgstr "Le fichier zip sera découpé en plusieurs fichiers afin de respecter la taille maximale de fichier que vous aurez indiquée."
+
 msgid "Do you want that the backup is sent by email?"
 msgstr "Voulez-vous que la sauvegarde vous soit envoyée par email ?"
+
+msgid "Send the backup files by email:"
+msgstr "Envoyer les fichiers de sauvegarde par email :"
 
 msgid "If so, please enter your email:"
 msgstr "Le cas échant, merci de compléter votre email :"
 
-msgid "The maximum attachment size (in MB):"
-msgstr "La taille maximal des pièces-jointes (en Mo) :"
-
-msgid "Please note that the zip file will be split into multiple files to comply with the maximum attachment size you have indicated"
-msgstr "Le fichier zip sera découpé en plusieurs fichiers afin de respecter la taille maximale que vous aurez indiquée."
-
-msgid "Do you want to rename the files?"
-msgstr "Voulez-vous renommer les fichiers ?"
-
-msgid "What is the suffix of the file:"
-msgstr "Quel est le suffixe du fichier : "
+msgid "Do you want to add a suffix to sent files:"
+msgstr "Voulez-vous ajouter un suffixe aux fichiers envoyés :"
 
 msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
 msgstr "Cette option permet de coutourner les mesures de bloquage prise par certains fournisseurs mails qui bloquent les mails avec des pièces jointes de type zip (comme GMail)."
 
 msgid "You do not need to fill this field if no mail is to be sent."
 msgstr "Vous n&#039;avez pas besoin de remplir ce champ si vous ne souhaitez pas envoyer de mail."
+
+msgid "Do you want that the backup is stored on a FTP?"
+msgstr "Voulez-vous que la sauvegarde soit stockée sur un FTP?"
+
+msgid "Save the backup files on a FTP?"
+msgstr "Sauvegarder les fichiers de sauvegarde sur un FTP?"
+
+msgid "FTP host:"
+msgstr "Hôte FTP:"
+
+msgid "Should be at the form %s or %s"
+msgstr "Devrait être de la forme %s ou %s"
+
+msgid "Your FTP login:"
+msgstr "Votre identifiant FTP :"
+
+msgid "Your FTP pass:"
+msgstr "Votre mot de passe FTP :"
+
+msgid "If you want to be notify when the FTP storage is finished, please enter your email:"
+msgstr "Si vous voulez être notifié quand le stockage FTP est terminé, merci d&#039;indiquer votre email :"
+
+msgid "Your PHP installation does not support FTP features, thus this option has been disabled! Sorry..."
+msgstr "Votre Installation PHP ne supporte pas les fonctionnalités FTP, ainsi, cette option a été desactivée! Désolée..."
 
 msgid "Advanced - Memory and time management"
 msgstr "Avancé - Gestion de la mémoire et du temps"
@@ -111,7 +144,7 @@ msgid "It is recommended that the maximum attachment size is not set to a value 
 msgstr "Il est recommandé que la taille maximale des pièces-jointes ne soit pas plus grande que cette valeur."
 
 msgid "What is the maximum time for the php scripts execution (in seconds):"
-msgstr "Quel est le temps maximal d&#039;execution des scripts PHP (en seconde) : "
+msgstr "Quel est le temps maximal d&#039;execution des scripts PHP (en seconde) :"
 
 msgid "Even if you do not have time restriction, it is recommended to set this value to 15sec in order to avoid any killing of the php scripts by your web hoster."
 msgstr "Même si vous n&#039;avez pas de restriction, il est recommandé de mettre cette valeur à 15 sec afin d&#039;éviter que votre hébergeur n&#039;arrête l&#039;execution de ce script."
@@ -122,8 +155,14 @@ msgstr "Voici les fichiers de sauvegarde. Vous pouvez forcer une nouvelle sauveg
 msgid "An automatic backup will be launched in %s days and %s hours."
 msgstr "Une sauvergarde automatique sera lancée dans %s jours et %s heures."
 
-msgid "Force a new backup"
-msgstr "Forcer une nouvelle sauvegarde"
+msgid "The backup process has started %s hours ago but has not finished yet."
+msgstr "La sauvegarde a commencé il y a %s heures mais n&#039;a pas encore terminée."
+
+msgid "Force a new backup (with Mail/FTP)"
+msgstr "Forcer une nouvelle sauvegarde (avec Mail/FTP)"
+
+msgid "Force a new backup (without any external storage or sending)"
+msgstr "Forcer une nouvelle sauvegarde (sans aucun stockage externe ou envoi)"
 
 msgid "Backups"
 msgstr "Sauvegardes"
@@ -149,8 +188,8 @@ msgstr "Fichiers de sauvegarde"
 msgid "Part %s"
 msgstr "Partie %s"
 
-msgid "Backup completed on %s at %s"
-msgstr "Sauvegarde terminée le %s à %s"
+msgid "Backup finished on %s at %s"
+msgstr "Sauvegarde terminé le %s à %s"
 
 msgid "The total size of the files is %s"
 msgstr "La taille totale des fichiers est %s"
@@ -158,33 +197,102 @@ msgstr "La taille totale des fichiers est %s"
 msgid "These files will be deleted in %s days"
 msgstr "Ces fichiers seront supprimés dans %s jours"
 
+msgid "Delete these backup files"
+msgstr "Effacer ces fichiers de sauvegarde"
+
+msgid "The process is still in progress for this backup (begun %s at %s)."
+msgstr "Le processus est toujours en cours pour cette sauvegarde (commencé le %s à %s)"
+
+msgid "The SQL extraction is in progress (%s tables extracted)."
+msgstr "L&#039;extraction SQL est en cours (%s tables extraites)."
+
+msgid "The ZIP creation is in progress (%s files has been added in the zip file and the current size of the zip is %s)."
+msgstr "La création du ZIP est en cours (%s fichiers ont été ajoutés dans le fichier zip et la taille actuelle du zip est de %s)."
+
+msgid "The FTP sending is in progress (%s files has been stored in the FTP)."
+msgstr "L&#039;envoi FTP est en cours (%s fichiers ont été stockés sur le FTP)."
+
+msgid "The MAIL sending is in progress (%s files has been sent)."
+msgstr "L&#039;envoi MAIL est en cours (%s fichiers ont été envoyés)."
+
+msgid "Cancel this process"
+msgstr "Annuler ce processus"
+
+msgid "Please wait..."
+msgstr "Merci d&#039;attendre ..."
+
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr "(Pour l&#039;instant, il n&#039;y a pas de fichiers de sauvegarde... Vous devriez attendre ou vous pouvez forcer une sauvegarde (voir ci-dessous) )"
 
-msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr "Une autre sauvegarde est en cours (depuis %s secondes)... Merci de patienter ! "
+msgid "Please wait, a backup is in progress! If you want to force a new backup, refresh this page and end the current backup first."
+msgstr "Merci d&#039;attendre, une sauvegarde est en cours ! Si vous voulez forcer une nouvelle sauvagarde, rafraichissez d&#039;abord cette page et terminez la sauvegarde en cours."
 
 msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
-msgstr "Une autre extraction SQL est en cours (depuis %s secondes)... Merci de patienter ! "
+msgstr "Une autre extraction SQL est en cours (depuis %s secondes)... Merci de patienter !"
 
-msgid "An error occured while sending mail!"
-msgstr "Une erreur est survenue lors de l&#039;envoi d&#039;un email !"
+msgid "(SQL extraction)"
+msgstr "(Extraction SQL)"
+
+msgid "An other backup is still in progress (for %s seconds)... Please wait!"
+msgstr "Une autre sauvegarde est en cours (depuis %s secondes)... Merci de patienter !"
+
+msgid "(ZIP creation)"
+msgstr "(Création du ZIP)"
+
+msgid "(FTP sending)"
+msgstr "(Envoi FTP)"
+
+msgid "Backup of %s on %s (%s)"
+msgstr "Sauvegarde de %s le %s (%s)"
+
+msgid "(MAIL sending)"
+msgstr "(Envoi Mail)"
+
+msgid "Your Wordpress installation cannot send emails (with heavy attachments)!"
+msgstr "Votre installation de Wordpress ne peut pas envoyer de mail (avec de lourdes pièces-jointes) !"
+
+msgid "The file %s cannot be deleted. You should have a problem with file permissions or security restrictions."
+msgstr "Le fichier %s ne peut pas être effacé. Vous devez avoir un problème avec les droits d&#039;accès aux fichiers ou des restrictions de sécurité."
 
 msgid "An unknown error occured!"
 msgstr "Une erreur inconnue est survenue"
 
-msgid "A new backup have been generated!"
-msgstr "Une nouvelle sauvegarde a été réalisée"
+msgid "The process has been canceled by a third person"
+msgstr "Le processus a été annulé par une tierce personne."
+
+msgid "A new backup has been generated!"
+msgstr "Une nouvelle sauvegarde a été générée !"
 
 msgid "Dear sirs,"
-msgstr "Cher monsieur, chère madame, "
+msgstr "Cher monsieur, chère madame,"
 
 msgid "Here is attached the %s on %s backup files for today"
 msgstr "Voici en pièce-jointe le %s sur %s fichiers de sauvegarde pour aujourd&#039;hui"
 
 msgid "Best regards,"
-msgstr "Salutations, "
+msgstr "Salutations,"
 
-msgid "Backup of %s (%s)"
-msgstr "Sauvegarde de %s (%s)"
+msgid "%s backup files has been successfully saved on your FTP (%s)"
+msgstr "%s fichiers de sauvegarde ont été sauvés sur votre FTP (%s)"
+
+msgid "Backup of %s on %s - FTP confirmation"
+msgstr "Sauvegarde de %s le %s - Confirmation FTP"
+
+msgid "No host has been defined"
+msgstr "Aucun hôte n&#039;a été défini"
+
+msgid "Your PHP installation does not support SSL features... Thus, please use a standard FTP and not a FTPS!"
+msgstr "Votre installation PHP ne supporte pas les fonctionnalités SSL... Ainsi, utiliser un FTP classique et pas de FTPS !"
+
+msgid "The host %s cannot be resolved!"
+msgstr "L&#039;hôte %s ne peut être joint !"
+
+msgid "The file %s cannot be transfered to the FTP repository! The ftp_put function returns: %s"
+msgstr "Le fichier %s ne peux pas être transféré sur le dépôt FTP ! La fonction ftp_put a retourné : %s"
+
+msgid "The specified folder %s does not exists. Please create it so that the transfer may start!"
+msgstr "Le répertoire spécifié %s n&#039;existe pas. Merci de le créer afin que le transfert puisse commencer."
+
+msgid "The login/password does not seems valid!"
+msgstr "L&#039;identifiant et le mot de passe ne semble pas valide !"
 
