--- a/lang/backup_scheduler-sv_SE.po
+++ b/lang/backup_scheduler-sv_SE.po
@@ -4,16 +4,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2012-01-28T11:03:30+00:00\n"
-"Last-Translator: GerinG <http://gering111.com/>\n"
-"Last-Translator: Slawka <http://eth0.org.ru>\n"
+"PO-Revision-Date: 2012-01-29T14:30:35+01:00\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%100/10==1 ? 2 : n%10==1 ? 0 : (n+9)%10>3 ? 2 : 1;\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: Russia\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Poedit-Language: Swedish\n"
+"X-Poedit-Country: Sweden\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;\n"
 "X-Poedit-Basepath: \n"
@@ -22,85 +20,85 @@ msgstr ""
 "X-Textdomain-Support: yes\n"
 
 msgid "This plugin enables scheduled backup of important part of your website : simple to use and efficient !"
-msgstr "Этот плагин выполняет резервное копирование важных частей вашего сайта: просто и эффективно"
+msgstr "Detta plugin gör det möjligt för en schemalagd säkerhetskopiering av viktiga delar av din webbplats: enkel och effektiv att anävnda!"
 
 msgid "Sorry, but you should install/activate %s on your website. Otherwise, this plugin will not work properly!"
 msgstr ""
 
 msgid "How often do you want to backup your website?"
-msgstr "Как часто вы хотите делать резервные копии вашего сайта?"
+msgstr "Hur ofta vill du säkerhetskopiera din webbplats?"
 
 msgid "Frequency (in days):"
-msgstr "Интервал (в днях):"
+msgstr "Frekvens (antal dagar):"
 
 msgid "Time of the backups:"
-msgstr "Время, когда создается бэкап"
+msgstr "Tidpunkt för säkerhetskopieringen:"
 
 msgid "Please note that 0 means midnight, 1 means 1am, 13 means 1pm, etc. The backup will occur at that time (server time) so make sure that your website is not too overloaded at that time."
-msgstr ""
+msgstr "Vänligen var uppmärksam på att &quot;0&quot; betyder midnatt, &quot;1&quot; betyder klockan 01, &quot;13&quot; betyder klockan 13 osv. Säkerhetskopian kommer att äga rum vid denna tidpunkt (aktuell servertid) så se till att din webbplats inte har allt för mycket trafik vid tillfäller för säkerhetskopieringen."
 
 msgid "Keep the backup files for (in days):"
-msgstr "Время хранение копий (в днях):"
+msgstr "Spara de kopierade filerna (i antal dagar):"
 
 msgid "What do you want to save?"
-msgstr "Что вы хотите сохранять?"
+msgstr "Vad vill du spara?"
 
 msgid "The plugins directory:"
-msgstr "Каталог плагина:"
+msgstr ""
 
 msgid "(i.e. %s)"
 msgstr ""
 
 msgid "Check this option if you want to save all plugins that you have installed and that you use on this website."
-msgstr "Выберите этот пункт, если вы хотите сохранять все установленные плагины"
+msgstr ""
 
 msgid "The themes directory:"
-msgstr "Каталог тем:"
+msgstr "Mappen för teman:"
 
 msgid "Check this option if you want to save all themes that you have installed and that you use on this website."
-msgstr "Выберите этот пункт, если вы хотите сохранять все установленные темы"
+msgstr ""
 
 msgid "The upload directory:"
-msgstr "Папка загрузки"
+msgstr ""
 
 msgid "Check this option if you want to save the images, the files, etc. that you have uploaded on your website to create your articles/posts/pages."
-msgstr "Выберите этот пункт, если вы хотите сохранять все загруженные изображения и файлы"
+msgstr ""
 
 msgid "The SQL database:"
-msgstr "База данных SQL"
+msgstr "SQL-databasen"
 
 msgid "Check this option if you want to save the text of your posts, your configurations, etc."
-msgstr "Выберите этот пункт, если вы хотите сохранять все ваши записи, файлы конфигурации и прочее"
+msgstr ""
 
 msgid "Do you want that the backup is sent by email?"
-msgstr "Вы хотите получать резервные копии на email?"
+msgstr "Vill du ha säkerhetskopian sänt via e-post?"
 
 msgid "If so, please enter your email:"
-msgstr "Если да, введите ваш emal:"
+msgstr "Om så, ange din e-postadress:"
 
 msgid "The maximum attachment size (in MB):"
-msgstr "Максимальный размер вложения (в МБ)"
+msgstr "Bilagans maximala storlek (i MB):"
 
 msgid "Please note that the zip file will be split into multiple files to comply with the maximum attachment size you have indicated"
 msgstr ""
 
 msgid "Do you want to rename the files?"
-msgstr "Вы хотите переименовывать файлы?"
+msgstr "Vill du döpa om filerna?"
 
 msgid "What is the suffix of the file:"
-msgstr "Суффикс файла"
+msgstr ""
 
 msgid "This option allows going round the blocking feature of some mail provider that block the mails with zip attachments (like GMail)."
 msgstr ""
 
 msgid "You do not need to fill this field if no mail is to be sent."
-msgstr ""
+msgstr "Det här fältet behöver du inte fylla i om du inte önskar e-post."
 
 msgid "Advanced - Memory and time management"
 msgstr ""
 
 msgid "What is the maximum size of allocated memory (in MB):"
-msgstr "Какой объём памяти может занимать плагин при работе?"
+msgstr ""
 
 msgid "On some Wordpress installation, you may have memory issues. Thus, try to reduce this number if you face such error."
 msgstr ""
@@ -124,34 +122,34 @@ msgid "An automatic backup will be launched in %s days and %s hours."
 msgstr ""
 
 msgid "Force a new backup (with mail)"
-msgstr "Создать новый бэкап(с отправкой почты)"
+msgstr "Tvinga ny säkerhetskopiering (via mail)"
 
 msgid "Force a new backup (without mail)"
-msgstr "Создать новый бэкап(без отправки почты)"
+msgstr "Tvinga ny säkerhetskopiering (utan mail)"
 
 msgid "Backups"
-msgstr "Резервные копии"
+msgstr "Säkerhetskopior"
 
 msgid "Parameters"
-msgstr "Параметры"
+msgstr "Parametrar"
 
 msgid "Manage translations"
-msgstr ""
+msgstr "Hantera översättningar"
 
 msgid "Give feedback"
-msgstr "Отправить отзыв"
+msgstr "Ge feedback"
 
 msgid "Other plugins"
-msgstr "Другие плагины"
+msgstr "Andra plugins"
 
 msgid "Date of the backup"
-msgstr "Дата резервного копирования"
+msgstr "Datum för säkerhetskoia"
 
 msgid "Backup files"
-msgstr ""
+msgstr "Säkerhetskopior"
 
 msgid "Part %s"
-msgstr "Часть"
+msgstr ""
 
 msgid "Backup completed on %s at %s"
 msgstr ""
@@ -160,38 +158,38 @@ msgid "The total size of the files is %s"
 msgstr ""
 
 msgid "These files will be deleted in %s days"
-msgstr ""
+msgstr "Dessa filer kommer raderas om %s dagar"
 
 msgid "Delete these backup files"
-msgstr "Удалить эти резервные копии"
+msgstr "Radera dessa säkerhetskopior"
 
 msgid "(For now, there is no backup files... You should wait or force a backup (see below) )"
 msgstr ""
 
 msgid "An other backup is still in progress (for %s seconds)... Please wait!"
-msgstr ""
+msgstr "En annan säkerhetskopiering pågår fortfarande (i %s sekunder)... Vänligen vänta!"
 
 msgid "An other SQL extraction is still in progress (for %s seconds)... Please wait!"
 msgstr ""
 
 msgid "An error occured while sending mail!"
-msgstr "Ошибка отправки почты"
+msgstr "Ett fel uppstod när e-post skulle skickas!"
 
 msgid "An unknown error occured!"
-msgstr "Возникла неизвестная ошибка"
+msgstr "Ett okänt fel har uppstått!"
 
 msgid "A new backup have been generated!"
-msgstr "Новая резервная копия создана"
+msgstr "En ny säkerhetskopia har gjorts!"
 
 msgid "Dear sirs,"
-msgstr "Уважаемые господа"
+msgstr "Kära"
 
 msgid "Here is attached the %s on %s backup files for today"
-msgstr ""
+msgstr "Här är dagens %s filer för din säkerhetskopiering"
 
 msgid "Best regards,"
-msgstr "С уважением"
+msgstr "Med vänliga hälsningar"
 
 msgid "Backup of %s (%s)"
-msgstr "Копия "
+msgstr ""
 
